--- a/AI_App/easy_cube/index.html
+++ b/AI_App/easy_cube/index.html
@@ -25,7 +25,7 @@
       <section class="bg-gray-800/60 rounded-lg p-4 shadow">
         <div class="flex flex-wrap gap-3 items-end">
           <label for="cubeCount" class="block">
-            <span class="block text-sm mb-1">输入立方体数量 n</span>
+            <span class="block text-sm mb-1">输入立方体数量</span>
             <input
               id="cubeCount"
               type="number"
